hphp/hack/test/typecheck/inout/bad_inout_use_this.php.like_types.exp
File "bad_inout_use_this.php", line 9, characters 13-17:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_this.php", line 9, characters 13-17:
Invalid argument to an inout parameter (Typing[4110])
File "bad_inout_use_this.php", line 9, characters 13-17:
Expected this
File "bad_inout_use_this.php", line 3, characters 18-19:
But got null
File "bad_inout_use_this.php", line 9, characters 13-17:
Invalid argument to an inout parameter (Typing[4110])
File "bad_inout_use_this.php", line 9, characters 13-17:
Expected this
File "bad_inout_use_this.php", line 3, characters 19-19:
But got C
File "bad_inout_use_this.php", line 7, characters 7-7:
Since C is not final
File "bad_inout_use_this.php", line 3, characters 19-19:
this might not be a C
